Fix software cursor stucking on old monitor

When the software cursor leaves an output, its RenderLayer is marked
as invisible and the area corresponding to the layer is scheduled to
be repainted in the output layer. However, the composite function only
checks whether the root RenderLayer needs a repaint, not the output
layer too.

BUG: 479668


(cherry picked from commit 1c15a6dd8875bf43bfc2eeb4d1383addec6a176c)